src/objects/likh__TestDeploySObject__c.object
<CustomObject>
    <description>My description blablabla</description>
    <fields>
        <fullName>likh__AutoNumberField__c</fullName>
        <label>AutoNumberField</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>likh__CheckBoxField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBoxField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>likh__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>likh__CurrencyField__c</fullName>
        <label>CurrencyField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>likh__DateField__c</fullName>
        <label>DateField</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>likh__DateTimeField__c</fullName>
        <label>DateTimeField</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>likh__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>likh__EmailField__c</fullName>
        <label>EmailField</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>likh__FormulaField__c</fullName>
        <formula>$User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FormulaField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>likh__GeolocationFieldDecimal__c</fullName>
        <label>GeolocationFieldDecimal</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>likh__GeolocationField__c</fullName>
        <label>GeolocationField</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>likh__LookupRelationshipField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LookupRelationshipField</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TestDeploySObjects (LookupRelationshipField)</relationshipLabel>
        <relationshipName>TestDeploySObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>likh__NumberField__c</fullName>
        <label>NumberField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>likh__PercentField__c</fullName>
        <label>PercentField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>likh__PhoneField__c</fullName>
        <label>PhoneField</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>likh__PicklistField__c</fullName>
        <label>PicklistField</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>likh__PicklistMultiField__c</fullName>
        <label>PicklistMultiField</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>likh__RichTextArea__c</fullName>
        <label>RichTextArea</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>likh__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>likh__TemporaryField__c</fullName>
        <label>TemporaryField</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>likh__TemporaryFromApi__c</fullName>
        <label>TemporaryFromApi</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>likh__TextArea__c</fullName>
        <label>TextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>likh__TextEncryptedField__c</fullName>
        <label>TextEncryptedField</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>likh__URLField__c</fullName>
        <label>URLField</label>
        <type>Url</type>
    </fields>
    <label>TestDeploySObject</label>
    <nameField>
        <label>TestDeploySObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestDeploySObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>